# moduli

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  data.csv  data_result.csv  test.txt
include/: moduli.h
src/: main.cpp  moduli.cpp
